styles/solutions.css
.solutions {
  background-color: #1a1a1a;
}

.solutions__blocks {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  gap: 10px;
}

.wrapper-solution > h2 {
  text-transform: uppercase !important;
  max-width: 1540px;
}

.solutions__blocks {
  margin-top: 35px;
  margin-bottom: 10px;
}

@media screen and (max-width: 600px) {
  .solutions__blocks {
    margin-top: 20px;
  }
}

.wrapper-solution {
  max-width: 1550px;
  padding: 0 15px 0 15px;
  margin: 0 auto;
}

.solutions__card {
  width: 100%;
  background-color: rgba(32, 32, 32, 1);
  height: 140px;
  border-radius: 20px;
  display: flex;
  align-items: center;
  padding: 0 60px 0 40px;
  cursor: pointer;
  position: relative;
}

.solutions__card:hover .solutions__card-icon path {
  stroke: #ef4824;
}

.solutions__card:hover > .card__left > .headline {
  border-bottom: 2px solid rgba(255, 255, 255, 1);
}

.card__left {
  display: flex;
  align-items: center;
  width: 50%;
}

@media screen and (max-width: 1024px) {
  .solutions__card {
    padding: 0 20px 0 20px;
  }
  .card__left {
    width: 40%;
  }

  .card__left > svg {
    width: 45px;
    height: 45px;
  }
  .card__left > .headline {
    font-size: 38px !important;
    line-height: 40px !important;
  }
}

@media screen and (max-width: 680px) {
  .card__left > svg {
    margin-right: 25px;
  }
}

@media screen and (max-width: 680px) {
  .solutions__card {
    flex-direction: column;
    height: auto;
    padding: 25px;
    border-radius: 10px;
  }
  .card__left {
    width: 100%;
  }
}

.card__left > h3 {
  color: rgba(255, 255, 255, 1) !important;
  margin-left: 15px;
}

.separator {
  margin: 0 40px 0 40px;
  height: 100px;
}

@media screen and (max-width: 1024px) {
  .separator {
    margin: 0 20px 0 20px;
  }
}

.card__right {
  display: flex;
  align-items: center;
  width: 50%;
  justify-content: space-between;
}

@media screen and (max-width: 1024px) {
  .card__right {
    width: 60%;
  }
}

@media screen and (max-width: 680px) {
  .card__right {
    width: 100%;
    border-top: 1px solid rgba(255, 255, 255, 0.1);
  }
  .separator {
    display: none;
  }
}

.card__right > p {
  font-family: "Manrope", sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 25px;
  color: rgba(255, 255, 255, 0.45);
  max-width: 440px;
}

@media screen and (max-width: 1024px) {
  .card__right > p {
    font-size: 14px;
    line-height: 20px;
  }
}

@media screen and (max-width: 680px) {
  .card__right > p {
    margin-top: 17px;
    max-width: 100%;
  }
}

.card__right > :is(a, .solutions__card-icon) {
  margin-left: 10px;
  padding: 0;
}

@media screen and (max-width: 680px) {
  .card__right > :is(a, .solutions__card-icon) {
    position: absolute;
    top: 15px;
    right: 15px;
  }
  .card__right > :is(a, .solutions__card-icon) > svg {
    width: 12px;
    height: 12px;
  }
}

.solutions__blocks div:not(:last-child) {
  margin-bottom: 17px;
}

.solution-button {
  width: 100%;
  height: 60px;
  margin-top: 10px;
  background-color: rgba(32, 32, 32, 1) !important;
  align-items: center;
}

@media screen and (max-width: 768px) {
  .solution-button {
    height: 55px;
  }
}

